# vandalizer

./: .dockerignore  .env.example  .gitignore  .gitignore.swp  .gitlab-ci.yml  .gitmodules  .setup.log.api  .setup.log.frontend  AGENTIAL_CHROME_EXTENSION_WORKFLOW.md  AGENTIC_CHAT_PLAN.md  AUDIT.md  AUTHORIZATION_MATRIX.md  AUTOVALIDATE_FOLLOWUPS.md  BROWSER_AUTOMATION_ROADMAP.md  CHANGELOG.md  CHROMADB_SETUP.md  CHROME_EXTENSION_UPDATE.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Celery.Containerfile  DEPLOY.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  HABIT_FORMATION_PLAN.md  Makefile  OPERATIONS.md  Pipfile  README.md  RECORDING_INTEGRATION_COMPLETE.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_5_0.md  SECURITY.md  VANDALIZER_MCP_PLAN.md  WORKFLOW_ARCHITECT.md  compose.override.yaml  compose.prod.yaml  compose.yaml  deploy.sh  deploy_roadmap.md  (+22 more)
app/: app.py  (+9 more)
backend/: .dockerignore  .env.example  Dockerfile  bootstrap_install.py  celery_worker.py  coverage.json  create_admin.py  migrate.py  migrate_create_default_teams.py  migrate_files.py  migrate_flask_to_beanie.py  pyproject.toml  run_celery.sh  setup_default_team.py  start_server.sh
backend/app/: celery_app.py  config.py  database.py  dependencies.py  exceptions.py  main.py  observability.py  rate_limit.py
backend/app/docs/: mgmt-api.md  vandalizer-api-skill.md
backend/app/middleware/: csrf.py
backend/app/models/: __init__.py  activity.py  api_key.py  approval.py  audit_log.py  automation.py  briefing.py  certification.py  chat.py  demo.py  document.py  email_log.py  extraction_optimization_run.py  extraction_test_case.py  feedback.py  folder.py  group.py  kb_optimization_run.py  kb_suggestion.py  kb_test_query.py  knowledge.py  library.py  mixins.py  notification.py  office.py  organization.py  passive.py  quality_alert.py  search_set.py  space.py  support.py  system_config.py  team.py  user.py  user_config.py  user_memory.py  validation_run.py  verification.py  verification_session.py  workflow.py  (+1 more)
backend/app/routers/: activity.py  admin.py  approvals.py  apps.py  audit.py  auth.py  automations.py  briefings.py  browser_automation.py  certification.py  chat.py  config.py  contact.py  demo.py  documents.py  extractions.py  feedback.py  files.py  folders.py  graph_webhooks.py  knowledge.py  library.py  mgmt.py  notifications.py  office.py  optimizer_inbox.py  organizations.py  projects.py  spaces.py  support.py  teams.py  verification.py  verification_sessions.py  workflows.py
backend/app/schemas/: activity.py  auth.py  automations.py  chat.py  config.py  demo.py  documents.py  extractions.py  knowledge.py  library.py  teams.py  workflows.py
backend/app/services/: _json_schema_utils.py  access_control.py  account_deletion_service.py  achievements.py  activity_service.py  audit_service.py  auth_service.py  automation_service.py  briefing_primer_content.py  briefing_service.py  browser_automation.py  budget_enforcer.py  certification_service.py  chat_compaction.py  chat_deps.py  chat_service.py  chat_subagents.py  chat_tools.py  classification_service.py  config_service.py  context_budget.py  cross_field_rules.py  cross_field_validation.py  demo_service.py  document_manager.py  document_readers.py  document_service.py  domain_prompts.py  email_service.py  engagement_service.py  export_import_service.py  extraction_engine.py  extraction_judge.py  extraction_judge_router.py  extraction_optimizer.py  extraction_test_case_generator.py  extraction_tuning_service.py  extraction_validation_service.py  feedback_prompt_service.py  file_service.py  (+55 more)
backend/app/tasks/: __init__.py  activity_tasks.py  approval_tasks.py  catalog_tasks.py  classification_tasks.py  demo_tasks.py  document_tasks.py  engagement_tasks.py  evaluation_tasks.py  extraction_tasks.py  kb_validation_tasks.py  knowledge_base_tasks.py  m365_tasks.py  passive_tasks.py  project_tasks.py  quality_tasks.py  retention_tasks.py  telemetry_tasks.py  upload_tasks.py  upload_validation_tasks.py  workflow_optimization_tasks.py  workflow_tasks.py
backend/app/utils/: bot_challenge.py  code_sandbox.py  code_sandbox_runner.py  crawl_scope.py  encryption.py  fetch_errors.py  file_validation.py  security.py  url_validation.py
backend/certification-data/: exercises.json  generate_pdfs.py  lessons.json
backend/scripts/: backfill_role_tags.py  cleanup_textfield_sum_rules.py  export_validated_seeds.py  fetch_ecfr_text.py  migrate_api_tokens.py  migrate_legacy_excel_html.py  normalize_user_emails.py  prepare_test_documents.py  reingest_knowledge_bases.py  remap_kb_source_urls.py  reocr_old_documents.py  repair_gov_kb_sources.py  seed_catalog.py  seed_domain_templates.py
backend/seeds/: collections.json
backend/seeds/knowledge_bases/: common_rule.json  conflict_of_interest_fcoi.json  cost_accounting_standards.json  dod_research_funding.json  doe_financial_assistance.json  effort_reporting_compensation.json  export_control.json  export_control_ear_itar.json  far_federal_acquisition.json  (+8 more)
backend/tests/: conftest.py  test_access_control.py  test_account_deletion_service.py  test_achievements.py  test_activity_tasks.py  test_admin_routes.py  test_admin_secret_scrubbing.py  test_approval_routes.py  test_audit_routes.py  test_audit_service.py  test_auth_helpers.py  test_auth_routes.py  test_auth_service.py  test_automation_service.py  test_automations_api_integration.py  test_automations_routes.py  test_bootstrap_install.py  test_bootstrap_scripts.py  test_bot_challenge.py  test_briefing_service.py  test_browser_automation_routes.py  test_certification_extraction_fields.py  test_chat_cert_tools.py  test_chat_compaction.py  test_chat_routes.py  test_chat_security_hardening.py  test_chat_service.py  test_chat_subagents.py  test_chat_tools.py  test_classification_service.py  test_classification_tasks.py  test_code_execution.py  test_code_sandbox.py  test_code_sandbox_runner.py  test_config.py  test_config_routes.py  test_config_service.py  test_content_rotation.py  test_context_budget.py  test_context_meter.py  (+129 more)
vandalizer-next/backend/: .env.example  migrate.py  pyproject.toml
(+1150 files in other folders)
