[project]
name = "vandalizer"
version = "2.0.0"
description = "Vandalizer"
authors = [{ name = "John Brunsfeld", email = "jbrunsfeld@uidaho.edu" }]
readme = "README.md"
requires-python = "<4.0,>=3.12"
dependencies = [
    "chardet",
    "chromadb",
    "datasets",
    "gunicorn",
    "devtools",
    "flask",
    "flask-bootstrap",
    "flask-cors",
    "flask-dance",
    "flask-login",
    "flask-mail",
    "flask-wtf",
    "wtforms",
    "httpx",
    "itsdangerous",
    "langchain",
    "langchain_chroma",
    "langchain_community",
    "langchain_openai",
    "langchain_redis",
    "langchain_text_splitters",
    "langfuse",
    "markdownify",
    "mongoengine",
    "nest-asyncio",
    "nltk",
    "oauthlib",
    "openai",
    "openpyxl",
    "pandas",
    "pydantic",
    "pydantic-ai",
    "pymongo",
    "pymupdf",
    "pymupdf4llm",
    "pypandoc",
    "pypdf",
    "PyPDF2",
    "python-dotenv",
    "redis",
    "requests",
    "rollbar",
    "tiktoken",
    "wtforms",
    "pydantic-settings>=2.8.1",
    "celery>=5.5.2",
    "pypandoc-binary>=1.15",
    "easyocr>=1.7.2",
    "pdf2image>=1.17.0",
    "pytesseract>=0.3.13",
    "uillm",
    "reportlab"
]


[project.optional-dependencies]
dev = ["tox", "pytest", "pytest-cov", "ruff", "selenium"]

[tool.setuptools.packages.find]
exclude = ["certs", "tests", "vandalizer-dev"]

[build-system]
requires = ["setuptools", "cython"]
build-backend = "setuptools.build_meta"

[tool.tox]
envlist = ["selenium_firefox", "selenium_chrome"]
no_package = true

[tool.tox.env.selenium_firefox.set_env]
BASE_URL = "https://vandalizer-dev.nkn.uidaho.edu"
TEST_BROWSER_HEADLESS = "true"
TEST_BROWSER = "firefox"

[tool.tox.env.selenium_firefox]
description = "Run Selenium tests"
skip_install = true
deps = ["selenium", "pytest"]
commands = [["pytest"]]

[tool.tox.env.selenium_chrome.set_env]
BASE_URL = "https://vandalizer-dev.nkn.uidaho.edu"
TEST_BROWSER_HEADLESS = "true"
TEST_BROWSER = "chrome"

[tool.uv.sources]
uillm = { git = "ssh://git@github.com/ui-insight/insight-helpers.git" }

[tool.tox.env.selenium_chrome]
description = "Run Selenium tests"
skip_install = true
deps = ["selenium", "pytest"]
commands = [["pytest"]]
