[project]
name = "vandalizer"
version = "2.0.0"
description = "Vandalizer"
authors = [{ name = "John Brunsfeld", email = "jbrunsfeld@uidaho.edu" }]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "chardet",
    "chromadb==1.0.0",
    "datasets",
    "gunicorn",
    "devtools",
    "flask",
    "flask-bootstrap",
    "flask-cors",
    "flask-dance",
    "flask-login",
    "flask-mail",
    "flask-wtf",
    "wtforms",
    "httpx",
    "itsdangerous",
    "langchain_openai",
    "langchain_redis",
    "langchain_text_splitters",
    "langfuse",
    "pysqlite3-binary; sys_platform == 'linux'",
    "markdownify",
    "mongoengine",
    "nest-asyncio",
    "nltk",
    "oauthlib",
    "openai",
    "openpyxl",
    "pandas",
    "pydantic",
    "pydantic-ai==1.9.1",
    "pymongo",
    "pymupdf",
    "pymupdf4llm",
    "pypandoc",
    "pypdf",
    "PyPDF2",
    "python-dotenv",
    "redis",
    "requests",
    "rollbar",
    "tiktoken",
    "wtforms",
    "pydantic-settings>=2.8.1",
    "celery[redis]>=5.5.2",
    "pypandoc-binary>=1.15",
    "reportlab",
    "pytesseract",
    "pdf2image",
    "beautifulsoup4>=4.13.4",
    "markitdown[all]==0.1.2",
    "jsonschema",
    "markdown>=3.8.2",
    "flower>=2.0.1",
    "xhtml2pdf>=0.2.15",
]


[project.optional-dependencies]
dev = ["tox", "pytest", "pytest-cov", "ruff", "selenium"]

[tool.setuptools.packages.find]
exclude = ["certs", "tests", "vandalizer-dev"]

[tool.tox]
envlist = ["selenium_firefox", "selenium_chrome"]
no_package = true

[tool.tox.env.selenium_firefox.set_env]
BASE_URL = "https://vandalizer-dev.nkn.uidaho.edu"
TEST_BROWSER_HEADLESS = "true"
TEST_BROWSER = "firefox"

[tool.tox.env.selenium_firefox]
description = "Run Selenium tests"
skip_install = true
deps = ["selenium", "pytest"]
commands = [["pytest"]]

[tool.tox.env.selenium_chrome.set_env]
BASE_URL = "https://vandalizer-dev.nkn.uidaho.edu"
TEST_BROWSER_HEADLESS = "true"
TEST_BROWSER = "chrome"

[dependency-groups]
dev = [
    "ipython>=9.4.0",
]

[tool.tox.env.selenium_chrome]
description = "Run Selenium tests"
skip_install = true
deps = ["selenium", "pytest"]
commands = [["pytest"]]
