[project]
name = "vandalizer-next-backend"
version = "0.1.0"
description = "Vandalizer Next - FastAPI backend"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "beanie>=1.27",
    "motor>=3.6",
    "pydantic-settings>=2.7",
    "python-jose[cryptography]>=3.3",
    "werkzeug>=3.1",
    "python-multipart>=0.0.18",
    "celery[redis]>=5.4",
    "pydantic-ai>=0.1",
    "pymongo>=4.0",
    "chromadb>=0.5",
    "langchain-text-splitters>=0.3",
    "langchain-openai>=0.3",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "aiosmtplib>=3.0",
    "PyPDF2>=3.0",
    "pypandoc>=1.13",
    "markitdown>=0.1",
    "markdownify>=0.13",
    "msal>=1.28",
    "redis>=5.0",
    "slowapi>=0.1",
    "reportlab>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
